# mars

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_lua_emscripten.sh  chopper-shooter.cpp  conandata.yml  conanfile.py  game.cpp  load_emscripten.sh  load_emscripten.sh.template  main.cpp  vcpkg.json
cmake/: AppleSetup.cmake  ConanDependencies.cmake  CopyContents.cmake  CopyContentsAfterBuild.cmake  VcpkgDependencies.cmake  VcpkgTestDependencies.cmake  VendorDependencies.cmake  WindowsSetup.cmake
cmake_modules/: FindEntt.cmake  FindSDL2_image.cmake  Findbox2d.cmake  Findcatch2.cmake  Findglad.cmake  Findglm.cmake  Findlua.cmake  Findsol.cmake  Findspdlog.cmake  Findtinyxml2.cmake
content/bundles/: platformer.json
content/ldtk/: basic_map.ldtk
content/scripts/: Level1.lua
content/shaders/: compile_shaders.json  compile_shaders_macos.json
content/spritefonts/: sans-serif.xml
content/tiled/: DinoRunner.tmx  Tile1x1.tsx  Tile2x1.tsx  Tile3x1.tsx  Tile3x3.tsx
emscripten-build/: mars.data  mars.html  mars.js  mars.wasm
game/: GameConstants.cpp  GameConstants.h
game/background/: Background.cpp  Background.h  BackgroundLayer.cpp  BackgroundLayer.h
game/chopper-shooter/: move-player.h
game/tile/: Tile.h  TileManager.cpp  TileManager.h
include/: Framework.h  mars_core.h
include/asset_toolkit/asset_bundle/: AssetBundle.h  AssetBundleLoader.h
include/asset_toolkit/common/: Rectangle.h
include/asset_toolkit/ldtk/: LdtkLoader.h  Result.h
include/asset_toolkit/sprite/: Rectangle.h  Sprite.h
include/asset_toolkit/tiled/: tiled_loader.h
include/box2d/physics2d/: Box2DWorld2D.h
include/core/buffers/: AIndexBuffer.h  AInstanceBuffer.h  AUniformBuffer.h  AVertexBuffer.h  BufferEnums.h  BuffersFactory.h  a_index_buffer.h  a_uniform_buffer.h  a_vertex_buffer.h  buffer_enums.h
include/core/camera/: CameraFactory.h
include/core/content/: AContent.h  ContentManager.h
include/core/data/: ImageData.h  SDLImageData.h
include/core/fonts/: SpriteFont.h  SpriteFontCharacter.h  SpriteFontManager.h
include/core/geometry/: Geometry.h  GeometryBuilder.h
include/core/input/: InputManager.h  Key.h  KeyboardState.h
include/core/life_management/: State.h
include/core/loaders/: FIleLoader.h  FileReader.h  ImageLoader.h  SpriteFontLoader.h  image_loader.h
include/core/log/: BrowserLogger.h  Logger.h  SpdLogger.h
include/core/math/: Color.h  Math.h  Matrix.h  Quad.h  Rect.h  color.h
include/core/mesh/: Mesh.h  MeshFactory.h  SpriteBatchMesh.h
include/core/physics2d/: AWorld2D.h  WorldDefinition2D.h  enums.h
include/core/pipelines/: APipelineFactory.cpp  APipelineFactory.h  PipelineFactory.h  pipeline_factory.h
include/core/renderer/: Renderer.h  enums.h
include/core/sprite/: AnimatedSprite.h  Sprite.h  SpriteBatch.h  SpriteBatchDrawable.h  game_sprite.h
include/core/texture/: Texture2D.h  TextureEnums.h  TextureFactory.h  a_texture2d.h  texture2d.h
include/core/time/: Time.h  TimeManager.h
include/core/vertex/: vertex.h
include/core/window/: WindowManager.h  WindowManagerOptions.h  window_manager.h
include/dx11/: dx11.h
include/dx11/buffers/: dx11_index_buffer.h  dx11_uniform_buffer.h  dx11_vertex_buffer.h
include/dx11/renderer/: dx11_renderer.h
include/dx11/texture/: dx11_texture2d.h
include/dx11/util/: dx11_converter.h  dx11_device_util.h  dx11_dxgi_device_util.h  dx11_dxgi_factory_util.h  dx11_dxgi_swap_chain_util.h  dx11_render_target_view_utility.h  dx11_util.h
include/ecs/: ECSManager.h
include/ecs/camera/: Camera2D.h  Camera2DSystem.h
include/ecs/collision/: Collider2D.h  Collision2DSystem.h
include/ecs/components/: AComponent.h
include/ecs/entity/: Entity.h  EntityBuilderLua.h  EntityManager.h
include/ecs/layer/: Layer.h  LayerManager.h
include/ecs/layering/: Layer.h  LayerManager.h
include/ecs/physics2d/: ACollider2D.h  BoxCollider2D.h  Collider2D.h  Physics2DSystem.h  RigidBody2D.h
include/ecs/script/: AScript.h  ScriptSystem.h
include/ecs/sprite/: AnimatedSpriteRenderer.h  SpriteAnimation.h  SpriteRenderer.h  SpriteRendererSystem.h
include/ecs/tilemap/: TileMap.h  TileMapChunk.h  TileMapSystem.h
include/ecs/transform/: RectTransform.h  RectTransformSystem.h
include/entt_ecs/: entt_ecs.h
include/entt_ecs/entity_builder/: entity_builder.h
include/entt_ecs/layer/: layer_tag.h
include/entt_ecs/sprite/: sprite_renderer.h  sprite_renderer_system.h
include/entt_ecs/transform/: rect_transform.h  rect_transform_system.h
include/gpu_util/: dx11.h  logger.h  metal.h  opengles.h
include/gpu_util/dx11/: dx11_blend_state_util.h  dx11_blob_util.h  dx11_buffer_util.h  dx11_device_util.h  dx11_dxgi_device_util.h  dx11_dxgi_factory_util.h  dx11_dxgi_swap_chain_util.h  dx11_input_layout_util.h  dx11_pixel_shader_util.h  dx11_rasterizer_state_util.h  dx11_render_target_view_utility.h  dx11_sampler_state_util.h  dx11_shader_resource_view_util.h  dx11_texture2d_util.h  dx11_util.h  dx11_vertex_shader_util.h
include/gpu_util/metal/: metal_buffer_util.h  metal_buffer_utility.h  metal_function_utility.h  metal_library_utility.h  metal_render_pipeline_state_utility.h  metal_sampler_state_util.h  metal_texture_utility.h  (+3 more)
include/lua/: LuaManager.h
include/math/: Color.cpp  Color.h
include/metal/: metal.h
include/opengles/: opengles.h
include/renderer/: Renderer.h
include/window/: WindowBounds.h  WindowManager.h  WindowManagerOptions.h
mars.xcodeproj/: project.pbxproj
scripts/: build.sh  build.template.sh  build_linux.sh  build_linux.template.sh  build_macos.sh  build_macos.template.sh  build_windows.ps1  build_windows.template.ps1  load_emscripten.sh  vcpkg_install_deps.ps1  vcpkg_install_deps.ps1.template
shared_libs/: README.md
src/: Framework.cpp
src/ecs/: ECSManager.cpp
src/entt_ecs/: entt_ecs.cpp
src/gpu_util/: logger.cpp
src/lua/: LuaManager.cpp
src/renderer/: Renderer.cpp
src/util/: logger.cpp
src/window/: WindowManager.cpp
tests/: geometry_tests.cpp  tests.cpp
tests/asset_toolkit/: asset_bundle_loader.cpp  ldtk_tests.cpp  tiled_loader_tests.cpp
(+319 files in other folders)
